About us button alignment fix

--- a/html/sass/pages/about.scss
+++ b/html/sass/pages/about.scss
@@ -99,6 +99,7 @@
         width: 100%;
         background: #f1f1f1;
         padding: 50px 65px 40px 65px;
+        min-height: 300px;
         @include bp(landscape) {
             padding: 45px 60px 20px 55px;
         }
