--- a/html/sass/pages/careers.scss
+++ b/html/sass/pages/careers.scss
@@ -571,7 +571,7 @@
             }
             @include bp(mobile) {
                 flex-direction: column;
-                padding: 10px 0 10px 0;
+                padding: 10px 0 20px 0;
             }
             .browsePosLft {
                 width: 71%;
@@ -599,6 +599,7 @@
                     }
                     @include bp(mobile) {
                         text-align: center;
+                        margin-bottom: 24px;
                     }
                 }
             }
@@ -618,7 +619,7 @@
                     align-items: center;
                     justify-content: center;
                     margin-top: 0px;
-                    margin-left: 12px;
+                    margin-left: 20px;
                     font-weight: normal;
                     letter-spacing: 0px;
                     font-size: 24px;
@@ -847,6 +848,7 @@
             @include bp(mobile) {
                 flex-direction: column;
                 margin: 22px 0;
+                margin-bottom: 0;
             }
             .cultImg {
                 max-width: 48.2%;
